Add internal and CLI options for javac plugins and options